Fix problem where action buttons jump by 5px when entering edit mode

--- a/less/inlineedit.less
+++ b/less/inlineedit.less
@@ -17,9 +17,9 @@
     cursor: pointer;
 }
 
-.ui-inline-del, .ui-inline-cancel, .ui-inline-save
+.ui-inline-del, .ui-inline-cancel
 {
-    margin-left:5px;
+    margin-left: 5px;
 }
 
 .ui-inline-save, .ui-inline-cancel
